<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MapboxFragment"
    android:id="@+id/mapFragment">

    <!-- Map view -->
    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        mapbox:layout_constraintBottom_toBottomOf="parent"
        mapbox:layout_constraintEnd_toEndOf="parent"
        mapbox:layout_constraintStart_toStartOf="parent"
        mapbox:layout_constraintTop_toTopOf="parent"

        mapbox:mapbox_cameraZoom="12.0">

    </com.mapbox.mapboxsdk.maps.MapView>

    <Button
        android:id="@+id/next_fragment_button"
        android:layout_width="@dimen/search_button_width"
        android:layout_height="@dimen/search_button_height"
        android:layout_marginBottom="@dimen/bottom_content_margin"
        android:background="@color/transparent_white"

        android:paddingStart="@dimen/search_button_horizontal_margin"
        android:paddingTop="@dimen/search_button_vertical_margin"
        android:paddingEnd="@dimen/search_button_horizontal_margin"
        android:paddingBottom="@dimen/search_button_vertical_margin"
        android:text="@string/inactive_map_fragment_button"
        android:textColor="@color/app_blue"
        android:textSize="@dimen/medium_text_size"

        mapbox:layout_constraintBottom_toBottomOf="@+id/mapView"
        mapbox:layout_constraintEnd_toEndOf="parent"
        mapbox:layout_constraintStart_toStartOf="parent" />


    <RelativeLayout
        android:id="@+id/progressView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/progress_view_margin_bottom"

        android:background="@color/semi_transparent_white"

        android:visibility="invisible"
        mapbox:layout_constraintBottom_toBottomOf="@+id/mapView"
        mapbox:layout_constraintEnd_toEndOf="parent"
        mapbox:layout_constraintStart_toStartOf="parent"
        mapbox:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/progressMessage"
            android:layout_width="250dp"
            android:layout_height="wrap_content"

            android:layout_margin="@dimen/header_text_margin"
            android:fontFamily="@font/brandon_med"
            android:text="@string/progress_message"
            android:textAlignment="center"
            android:textColor="@color/app_blue"

            android:textSize="16sp"
            mapbox:layout_constraintBottom_toBottomOf="parent"
            mapbox:layout_constraintEnd_toEndOf="parent"
            mapbox:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_below="@id/progressMessage"

            android:layout_centerHorizontal="true"
            android:indeterminateTint="@color/app_blue" />

        <Button
            android:id="@+id/quitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@id/progressBar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/search_button_vertical_margin"
            android:layout_marginBottom="@dimen/header_text_margin"
            android:backgroundTint="@color/app_blue"
            android:paddingStart="@dimen/search_button_horizontal_margin"
            android:paddingTop="@dimen/search_button_vertical_margin"
            android:paddingEnd="@dimen/search_button_horizontal_margin"

            android:text="@string/quit_progress"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/removePointsView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/progress_view_margin_bottom"

        android:background="@color/semi_transparent_white"

        android:visibility="invisible"
        mapbox:layout_constraintBottom_toBottomOf="@+id/mapView"
        mapbox:layout_constraintEnd_toEndOf="parent"
        mapbox:layout_constraintStart_toStartOf="parent"
        mapbox:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/removePointsMessage"
            android:layout_width="250dp"
            android:layout_height="wrap_content"

            android:layout_margin="@dimen/header_text_margin"
            android:fontFamily="@font/brandon_med"
            android:text="@string/remove_points_message"
            android:textAlignment="center"
            android:textColor="@color/app_blue"

            android:textSize="16sp"
            mapbox:layout_constraintBottom_toBottomOf="parent"
            mapbox:layout_constraintEnd_toEndOf="parent"
            mapbox:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/yesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@id/removePointsMessage"
            android:layout_alignStart="@id/removePointsMessage"

            android:layout_marginTop="@dimen/search_button_vertical_margin"
            android:layout_marginBottom="@dimen/header_text_margin"
            android:layout_marginEnd="@dimen/search_button_horizontal_margin"
            android:layout_marginStart="@dimen/search_button_horizontal_margin"

            android:backgroundTint="@color/app_blue"

            android:text="@string/yes"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size" />

        <Button
            android:id="@+id/noButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@id/removePointsMessage"
            android:layout_alignEnd="@id/removePointsMessage"

            android:layout_marginTop="@dimen/search_button_vertical_margin"
            android:layout_marginBottom="@dimen/header_text_margin"
            android:layout_marginStart="@dimen/search_button_horizontal_margin"
            android:layout_marginEnd="@dimen/search_button_horizontal_margin"

            android:backgroundTint="@color/app_blue"
            android:text="@string/no"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size" />

    </RelativeLayout>

    <ImageButton
        android:id="@+id/onboardingAgain"

        android:layout_width="32dp"
        android:layout_height="32dp"

        android:background="@drawable/round_corners_top_bottom_white_picker"
        android:src="@drawable/ic_icon_interrogation"

        android:layout_marginEnd="@dimen/utility_buttons_left_margin"
        android:layout_marginBottom="@dimen/bottom_content_margin"
        mapbox:layout_constraintStart_toStartOf="parent"
        mapbox:layout_constraintEnd_toStartOf="@id/next_fragment_button"
        mapbox:layout_constraintBottom_toBottomOf="@+id/mapView"
        android:contentDescription="@string/onboarding" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="@dimen/utility_buttons_left_margin"
        android:layout_marginBottom="@dimen/bottom_content_margin"
        mapbox:layout_constraintBottom_toBottomOf="@+id/mapView"
        mapbox:layout_constraintEnd_toEndOf="parent"
        mapbox:layout_constraintStart_toEndOf="@id/next_fragment_button">

        <ImageButton
            android:contentDescription="@string/my_location_button"
            android:id="@+id/myLocation"
            android:layout_width="@dimen/small_button_size"
            android:layout_height="@dimen/small_button_size"

            android:background="@drawable/round_corners_top_bottom_white_picker"
            android:src="@drawable/ic_icon_location" />

        <ImageButton
            android:contentDescription="@string/zoom_in"
            android:id="@+id/zoomIn"
            android:layout_width="@dimen/small_button_size"
            android:layout_height="@dimen/small_button_size"

            android:layout_below="@id/myLocation"
            android:layout_marginTop="@dimen/zoom_in_margin_top"
            android:background="@drawable/round_corners_top_mapbtn"
            android:src="@drawable/ic_icon_plus" />

        <ImageButton
            android:contentDescription="@string/zoom_out"
            android:id="@+id/zoomOut"
            android:layout_width="@dimen/small_button_size"
            android:layout_height="@dimen/small_button_size"

            android:layout_below="@id/zoomIn"
            android:background="@drawable/round_corners_bottom_matbtn"
            android:src="@drawable/ic_icon_minus" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>