<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/weatherFragment"

    android:background="@drawable/round_corners_top_white">

    <ImageView
        android:id="@+id/icon_cloud"
        android:layout_width="wrap_content"
...
